# my_vilbert

./: LICENSE  README.md  exp.sh  pyproject.toml
config/: my_bert_sample_6layer_6conect.json
sample/: pretrain_sample.txt
src/: main.py
src/model/: my_vilbert.py
src/utils/: data_loader.py  logger_config.py
src/visualization/: visualize_learning_info.py
