[tool.poetry]
name = "my_vilbert"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.0"
torch = "^1.4.0"
torchvision = "^0.5.0"
boto3 = "^1.12.11"
tqdm = "^4.43.0"
tensorboardX = "^2.0"
transformers = "^2.5.1"
pretrainedmodels = "^0.7.4"
black = "^19.10b0"
mypy = "^0.761"
matplotlib = "^3.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
